[Adding P and its BGC]

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Hello there..Trying github</h1>
+    <p>For tomorrow: Java Notes + Math Notes + Programming Hero Practice... </p>
 </body>
 </html>
