--- a/index.html
+++ b/index.html
@@ -22,13 +22,27 @@
             <p>
                 Hi there...I'm Shafi from Bangladesh.I'm a freelance web developer with 3+ years of experience. So far I've completed 31 projects and worked with 6 companies.
             </p>
-            <a class="link_button" target="blank" href="https://www.linkedin.com/in/abidrahmanshafi/">Hire Me</a>
+            <a class="link_button" target="_blank" href="https://www.linkedin.com/in/abidrahmanshafi/">Hire Me</a>
         </div>
     
         <div class="half-width">
             <img src="my-bg.png" alt="Shafi in Jan 2021">
         </div>
     </section>
+
+<section class="Dream_big">
+    <div class="half-width">
+        <img src="my-bg2.png" alt="Shafi in 2019">
+    </div>
+        
+    <div class="half-width"> 
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p>I'm teaching web development since 2019 and I'v 450+ students.If you want to be a web developer , enroll below.</p>
+        <a class="link_button" href="http://www.http://abidrahmanshafi.epizy.com/" target="_blank">Enroll Now</a>
+    </div>
+
+</section>
 
 
 </body>
